# EveOffline2D

./: CMakeLists.txt  LLXPRT.md
EveOffline2D/Application/: Application.cpp
EveOffline2D/AssetManager/: Assets.h
EveOffline2D/Components/: Components.h
EveOffline2D/Components/Impl/: ModuleSlot.h  Position.h
EveOffline2D/Spawners/: SpawnPlayer.cpp  SpawnPlayer.h  SpawnShip.h
EveOffline2D/Systems/: Systems.h
EveOffline2D/Systems/Impl/: CameraControlSystem.cpp  RenderBackgroundSystem.cpp  RenderSpriteSystem.cpp
assets/data/ships/: burst.json  rifter.json
src/Application/: Application.cpp  Application.h
src/AssetManager/: Assets.h
src/Components/: Components.h
src/Components/Commands/: ApproachCommand.h  ApproachState.h  IdleState.h  MovementState.h  OrbitState.h
src/Components/Impl/: Acceleration.h  Capacitor.h  MarkedForDeletion.h  MaxRotationSpeed.h  MaxSpeed.h  ModuleSlot.h  MouseCollider.h  Position.h  Rotation.h  Selected.h  Speed.h  Sprite.h  TargetPosition.h  TargetRotation.h  ThrustLevel.h  Velocity.h
src/Spawners/: SpawnNPC.cpp  SpawnNPC.h  SpawnPlayer.cpp  SpawnShip.cpp
src/Systems/: Systems.h
src/Systems/BackgroundRender/: RenderBackgroundSystem.cpp  RenderBackgroundSystem.h
src/Systems/Energy/: CapacitorRechargeSystem.cpp  CapacitorRechargeSystem.h  CapacitorRestoreSystem.cpp  CapacitorRestoreSystem.h
src/Systems/GUI/: BeginImGuiSystem.h  ControlPanelSystem.cpp  ControlPanelSystem.h  DebugUISystem.cpp  DebugUISystem.h  EndImGuiSystem.cpp  HudSystem.cpp  HudSystem.h
src/Systems/Impl/: BeginImGuiSystem.cpp  CameraControlSystem.cpp  CameraControlSystem.h  DebugUISystem.cpp  EndCameraSystem.cpp  EndImGuiSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  RenderFPSSystem.cpp  RenderSpriteSystem.cpp  RotationSystem.cpp  ThrustSystem.cpp
src/Systems/Input/: CameraControlSystem.cpp  InputSystem.cpp  SelectObjectSystem.cpp  (+1 more)
src/Utils/: EntityNames.h
(+15 files in other folders)
